# 4chan-go-rs

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  README-setup.md  README.md  SECURITY.md
.github/workflows/: main.yml
docs/: METRICS.md  forensic_analysis_report.md  legacy_information.md  mvp.md  mvp_modernization.md  technical_documentation.md
v2/: Makefile  README-GNAP.md  README.md  docker-compose.gnap.yml
v2/api-core/: .eslintrc.js  package-lock.json  package.json  test-user-rate-limiting.sh  tsconfig.json
v2/api-core/migrations/: 001_create_core_tables.sql
v2/api-core/prisma/: schema.prisma
v2/api-core/services/file-service/: .env.example  go.mod  go.sum  main.go
v2/api-core/services/go-service/: go.mod  go.sum  main.go
v2/api-core/services/media-processor/: .env.example  Cargo.toml
v2/api-core/services/nodejs-service/: package.json
v2/api-core/services/rust-service/: Cargo.toml
v2/api-core/shared/: gnap-types.ts
v2/api-core/src/: app.ts  index.ts
v2/api-core/src/middleware/: user-rate-limiter.ts
v2/api-core/src/utils/: logger.ts
v2/api-specs/openapi/: auth.yaml  health.yaml  openapi.yaml  posts.yaml
v2/docs/: api-reference.md  deployment-guide.md  migration-guide.md  moderator-guide.md
v2/file-service/: Dockerfile  README.md  go.mod  go.sum  main.go
v2/file-service/config/: config.go
v2/file-service/internal/api/: router.go
v2/file-service/internal/auth/: jwt.go  jwt_test.go
v2/file-service/internal/database/: postgres.go  redis.go
v2/file-service/internal/models/: models.go
v2/file-service/internal/repository/: file_repository.go  queue_repository.go
v2/file-service/internal/services/: malware_scanner.go  (+2 more)
v2/file-service/migrations/: 001_create_files_table.sql  001_init.sql  002_create_additional_tables.sql
v2/frontend-modern/: index.html  package-lock.json  package.json  vite.config.ts
v2/infrastructure/: .env.example  API_GATEWAY.md  README.md  SECURITY.md  docker-compose.yml
v2/media-processor/: Cargo.toml  Cargo.toml.bak  README.md
v2/media-processor/docs/: PROTOBUF_VULNERABILITY_ANALYSIS.md
v2/media-processor/migrations/: 002_create_core_tables.sql
v2/media-processor/src/: config.rs  error.rs  main.rs  utils.rs
v2/media-processor/src/handlers/: files.rs
v2/media-processor/src/middleware/: mod.rs
v2/media-processor/src/models/: ban.rs  board.rs  captcha.rs  file.rs  mod.rs  post.rs  report.rs  thread.rs  user.rs  wordfilter.rs
v2/media-processor/src/repositories/: file_repository.rs  mod.rs  postgres_repository.rs  redis_repository.rs  s3_repository.rs
v2/media-processor/src/routes/: auth.rs  boards.rs  captcha.rs  files.rs  health.rs  mod.rs  moderation.rs  posts.rs  threads.rs
v2/media-processor/src/services/: malware_scanner.rs  mod.rs  thumbnail_generator.rs
v2/microfrontends/auth/: package.json  vite.config.ts
v2/microfrontends/board-viewer/: package.json  tsconfig.json  vite.config.ts
v2/microfrontends/catalog-viewer/: package.json  vite.config.ts
v2/microfrontends/media-viewer/: package.json  vite.config.ts
v2/microfrontends/moderation/: package.json  vite.config.ts
v2/microfrontends/post-creator/: package.json  vite.config.ts
v2/microfrontends/shared/: package.json
v2/microfrontends/shell/: package.json
v2/migrations/legacy/: README.md  export-mysql.sql  import-postgres.sql  migrate-files.ts  package.json  rollback.sql  transform.ts  verify-migration.ts
v2/tests/integration/: auth-flow.test.ts  docker-compose.test.yml  file-upload-flow.test.ts  helpers.ts  jest.config.ts  moderation-flow.test.ts  package.json  setup.ts  teardown.ts  thread-flow.test.ts
v2/tests/load/: board-listing.js  file-upload.js  post-creation.js  run-load-tests.sh  thread-viewing.js
v2/tests/security/: auth-bypass-tests.ts  file-upload-security.ts  package.json  rate-limit-tests.ts  sql-injection-tests.ts  xss-tests.ts
(+174 files in other folders)
